src-tauri/tests/snapshots/pipeline_scenarios__res_large_tokens.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: system
  id: r1
  content_length: 1
  content:
    - type: text
      text: "2.0s • in 1,234,567 • out 98,765"
  status: ~
  streaming: ~
