src-tauri/tests/snapshots/pipeline_scenarios__room_basic_no_author_sets_is_room_chat_marker.snap
---
source: tests/pipeline_scenarios.rs
expression: "run_normalized(vec![room_chat(\"rc1\", \"hello team\")])"
---
- role: user
  id: msg-1
  content_length: 1
  content:
    - type: text
      text: hello team
  status: ~
  streaming: ~
