src-tauri/tests/snapshots/pipeline_scenarios__room_with_attachments_renders_correct_parts.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: user
  id: msg-1
  content_length: 2
  content:
    - type: text
      text: "check "
    - type: file-mention
      path: src/foo.rs
  status: ~
  streaming: ~
