src-tauri/tests/snapshots/pipeline_scenarios__room_with_author_stamps_author_and_marker.snap
---
source: tests/pipeline_scenarios.rs
expression: "run_normalized(vec![room_chat_with_author(\"rc1\", \"hi\", \"member-42\")])"
---
- role: user
  id: msg-1
  content_length: 1
  content:
    - type: text
      text: hi
  status: ~
  streaming: ~
