src-tauri/tests/snapshots/pipeline_scenarios__stream_thinking_lifecycle_end_to_end.snap
---
source: tests/pipeline_scenarios.rs
expression: normalize_stream_fingerprint(&fingerprint)
---
emissions:
  - kind: partial
    line_index: 0
    event_type: stream_event
    message:
      role: assistant
      id: msg-1
      content:
        - type: reasoning
          text_preview: ""
          streaming: true
          has_duration: false
      streaming: true
  - kind: partial
    line_index: 1
    event_type: stream_event
    message:
      role: assistant
      id: msg-1
      content:
        - type: reasoning
          text_preview: Quick thought.
          streaming: true
          has_duration: false
      streaming: true
  - kind: partial
    line_index: 2
    event_type: stream_event
    message:
      role: assistant
      id: msg-1
      content:
        - type: reasoning
          text_preview: Quick thought.
          streaming: true
          has_duration: false
      streaming: true
  - kind: full
    line_index: 3
    event_type: assistant
    messages:
      - role: assistant
        id: msg-1
        content:
          - type: reasoning
            text_preview: Quick thought.
            streaming: false
            has_duration: true
        streaming: ~
  - kind: partial
    line_index: 6
    event_type: stream_event
    message:
      role: assistant
      id: msg-1
      content:
        - type: text
          text: Done.
      streaming: true
  - kind: full
    line_index: 7
    event_type: assistant
    messages:
      - role: assistant
        id: msg-1
        content:
          - type: reasoning
            text_preview: Quick thought.
            streaming: false
            has_duration: true
          - type: text
            text: Done.
        streaming: ~
final_render:
  - role: assistant
    id: msg-1
    content:
      - type: reasoning
        text_preview: Quick thought.
        streaming: false
        has_duration: true
      - type: text
        text: Done.
    streaming: ~
persisted_turn_blocks:
  - - type: thinking
      has_duration_ms: true
    - type: text
      has_duration_ms: false
historical_render:
  - role: assistant
    id: msg-2
    content:
      - type: reasoning
        text_preview: Quick thought.
        streaming: ~
        has_duration: true
      - type: text
        text: Done.
    streaming: ~
